# WIN_College_Repair_hub

Community_repair-main/: .gitignore  (+3 more)
Community_repair-main/repairhub-api/: .dockerignore  Dockerfile  db.sqlite3-journal  manage.py  pyproject.toml  pytest.ini  requirement.txt  requirements.txt
Community_repair-main/repairhub-api/.local/: db.sqlite3  db.sqlite3-journal
Community_repair-main/repairhub-api/src/apps/accounts/: admin.py  api.py  bootstrap.py  middleware.py  models.py
Community_repair-main/repairhub-api/src/apps/accounts/migrations/: 0001_initial.py
Community_repair-main/repairhub-api/src/apps/admin_ops/: admin.py  api.py  models.py
Community_repair-main/repairhub-api/src/apps/ai/: api.py  models.py  services.py
Community_repair-main/repairhub-api/src/apps/catalog/: api.py  models.py
Community_repair-main/repairhub-api/src/apps/chat/: api.py  consumers.py  models.py
Community_repair-main/repairhub-api/src/apps/community/: api.py  models.py
Community_repair-main/repairhub-api/src/apps/notifications/: api.py  models.py
Community_repair-main/repairhub-api/src/apps/payments/: api.py  models.py  services.py
Community_repair-main/repairhub-api/src/apps/repairers/: api.py  apps.py  models.py
Community_repair-main/repairhub-api/src/apps/repairs/: api.py  apps.py  models.py  services.py
Community_repair-main/repairhub-api/src/apps/rewards/: api.py  models.py  services.py
Community_repair-main/repairhub-api/src/common/: permissions.py
Community_repair-main/repairhub-api/src/repairhub_api/: __init__.py  asgi.py  jwt.py  routing.py  settings.py  urls.py  wsgi.py
Community_repair-main/repairhub-api/tests/: test_repairhub.py
(+86 files in other folders)
